# frankbueltge.de

./: .gitignore  .vercelignore  CLAUDE.md  LICENSE.md  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
pipelines/beifang/: README.md  pyproject.toml
pipelines/beifang/src/beifang/: assemble.py  capture.py  classify.py  identity.py  leaks.py  lists_fetch.py  model.py  panel.py  run.py
pipelines/beifang/src/beifang/data/: panel.json
pipelines/beifang/tests/: test_assemble.py  test_capture.py  test_capture_browser.py  test_classify.py  test_identity.py  test_leaks.py  test_lists.py  test_model.py  test_panel.py  test_run.py
pipelines/ghost-fleet/: pyproject.toml
pipelines/ghost-fleet/src/ghost_fleet/: __init__.py  build.py  eez.py  gfw.py  run.py  select.py
pipelines/ghost-fleet/src/ghost_fleet/data/: eez_names.json
pipelines/ghost-fleet/tests/: test_eez.py  test_gfw.py  test_normalize.py  test_run.py  test_select.py  test_smoke.py
pipelines/protokoll/: Dockerfile  README.md  pyproject.toml
pipelines/protokoll/src/protokoll/: __init__.py  assemble.py  fetch.py  github_commit.py  model.py  run.py  trend.py  validate.py  verluste.py
pipelines/protokoll/src/protokoll/adapters/: __init__.py  _util.py  attention.py  base.py  co2.py  conflict.py  fires.py  food.py  oil.py  population.py  quakes.py  rates.py  refugees.py  seaice.py  sst.py
pipelines/protokoll/src/protokoll/data/: food.json  refugees.json
pipelines/protokoll/src/protokoll/halbwertszeit/: __init__.py  fit.py  pageviews.py  run.py  wikidata.py
pipelines/protokoll/src/protokoll/parallaxe/: __init__.py  analyze.py  extract_llm.py  extracts.py  prompt.py  register.py  run.py
pipelines/protokoll/tests/: conftest.py  test_adapter_attention.py  test_adapter_conflict.py  test_adapters_climate.py  test_adapters_economy.py  test_adapters_events.py  test_adapters_manual.py  test_assemble.py  test_co2_trend.py  test_fetch.py  test_github_commit.py  test_hw_fit.py  test_hw_pageviews.py  test_hw_run.py  test_hw_wikidata.py  test_index.py  test_model.py  test_pr_bls.py  test_pr_claims.py  test_pr_disasters.py  test_pr_retreat.py  test_pr_run.py  test_px_analyze.py  test_px_census.py  test_px_extract.py  test_px_register.py  test_px_run.py  test_run.py  test_seaice_trend.py  test_smoke.py  test_sr_fingerprint.py  test_sr_watch.py  test_sst_trend.py  test_trend.py  test_validate.py  test_verluste.py
pipelines/protokoll/tests/fixtures/: co2_trend_gl.csv  n_seaice.csv  s_seaice.csv  sst_world.json
pipelines/redaction/: pyproject.toml
pipelines/redaction/src/redaction/: __init__.py  build.py  cdx.py  extract.py  prose.py  run.py  salience.py  textdiff.py  watchlist.py
pipelines/redaction/tests/: test_build.py  test_cdx.py  test_extract.py  test_prose.py  test_run.py  test_salience.py  test_textdiff.py  test_watchlist.py
pipelines/round-number/: pyproject.toml
pipelines/round-number/scripts/: fetch_datasets.py
pipelines/round-number/src/round_number/: __init__.py  benford.py  build.py  controls.py  datasets.py  lastdigit.py  run.py
pipelines/round-number/tests/: test_benford.py  test_build.py  test_controls.py  test_datasets.py  test_lastdigit.py  test_run.py  test_smoke.py
pipelines/round-number/tests/fixtures/: sample.json
(+1177 files in other folders)
