[project]
name = "beifang"
version = "0.1.0"
description = "Weekly pipeline: science-tracking census (frankbueltge.de, Gegenmessung)"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27", "playwright>=1.45", "tldextract>=5"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
beifang = ["data/*.json", "data/lists/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["browser: braucht installiertes Chromium (playwright install chromium)"]
